backend connectivity for manage plans page of admin and alignment fix in plan page of user

--- a/Admin/manageplansPage/ManagePlansStyles.css
+++ b/Admin/manageplansPage/ManagePlansStyles.css
@@ -90,3 +90,22 @@ body {
         font-size: larger;
         color: black;
     }
+
+    .benefit-badge{
+        position: absolute;
+        top: 10px; 
+        right: 5px; 
+        background: blue; 
+        color: white; 
+        font-size: 0.80rem; 
+        padding: 6px 12px; 
+        border-radius: 25px;
+        font-weight: bold;
+    }
+    .cursor-pointer {
+        cursor: pointer;
+      }
+      .material-icons {
+        font-size: 24px;
+      }
+      
